# toml-to-requirements

./: .gitignore  README.md  pyproject.toml
toml_to_requirements/: __init__.py  main.py
