[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "toml_to_requirements"
authors = [
    {name = "Jake Cyr", email = "cyrjake@gmail.com"},
]
version = "0.0.1"
description = "Convert a pyproject.toml file to a requirements.txt file"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["toml", "requirements", "converter", "parser"]
license = {text = "MIT"}
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "toml"
]

[project.scripts]
toml-to-req = "toml_to_requirements.main:main"

[tool.distutils.bdist_wheel]
universal = true
